--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,7 +4,15 @@ server {
 
     location / {
         root /usr/share/nginx/html;
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location /api/ {
+        proxy_pass http://backend:3000/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # เปิด CORS หากต้องโหลด tile หรือ API ในอนาคต
